Bug 437423 - System Settings prompts to save/discard change on close after changing SDDM theme with double-click
Summary: System Settings prompts to save/discard change on close after changing SDDM t...
Status: RESOLVED FIXED
Alias: None
Product: systemsettings
Classification: Applications
Component: kcm_sddm (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR minor
Target Milestone: ---
Assignee: David Edmundson
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2021-05-20 16:11 UTC by Patrick Silva
Modified: 2022-08-09 23:26 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.26
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2021-05-20 16:11:37 UTC
STEPS TO REPRODUCE
1. open SDDM KCM
2. double-click on a SDDM theme
3. enter your password to confirm the change
4. try to close System Settings

OBSERVED RESULT
System Settings prompts to save/discard already applied change

EXPECTED RESULT
do not prompt to save/discard change

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.22.80
KDE Frameworks Version: 5.83.0
Qt Version: 5.15.2
Graphics Platform: Wayland
Comment 1 Nate Graham 2021-05-20 17:54:21 UTC
Can reproduce.
Comment 2 Patrick Silva 2021-06-08 18:30:14 UTC
This bug also affects Boot Splash Screen KCM on neon unstable.
Comment 3 Nate Graham 2022-08-09 23:17:24 UTC
Git commit 6c4e0d6632012979623a716711abe0d3faf36585 by Nate Graham, on behalf of oioi 555.
Committed on 09/08/2022 at 23:02.
Pushed by ngraham into branch 'master'.

Clarify enable or disable Apply button on save

Clarify whether the Apply button is enabled or disabled based on the saved result.

M  +2    -1    src/sddmkcm.cpp

https://invent.kde.org/plasma/sddm-kcm/commit/6c4e0d6632012979623a716711abe0d3faf36585