Clarify enable or disable Apply button on save

Clarify whether the Apply button is enabled or disabled based on the saved result.

BUG:437423