src/sddmkcm.cpp
@@ -152,10 +152,11 @@ void SddmKcm::save()
     connect(job, &KJob::result, this, [this, job] {
         if (job->error()) {
             Q_EMIT errorOccured(job->errorString());
-            settingsChanged(); // Re-enable the Apply button
         } else {
             m_data->sddmSettings()->load();
         }
+        // Clarify enable or disable the Apply button.
+        this->setNeedsSave(job->error());
     });
     job->start();
 }
